Fix Citizenship Form update issue when navigating back

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -213,24 +213,35 @@
 
     private async Task OnValidSubmit(EditContext context)
     {
-        EncryptedCitizenshipForm form = context.Model as EncryptedCitizenshipForm;
-
-        if (HasNonZeroHashes(form.CitizenshipHashes))
+        try
         {
-            var associatedForm = userData.EncryptedCitizenshipForms.FirstOrDefault(f => f.CountryCode == form.CountryCode);
+            EncryptedCitizenshipForm form = context.Model as EncryptedCitizenshipForm;
 
-            if (associatedForm != null)
+            if (HasNonZeroHashes(form.CitizenshipHashes))
             {
-                associatedForm.IsSubmitted = true;
+                var associatedForm = userData.EncryptedCitizenshipForms.FirstOrDefault(f => f.CountryCode == form.CountryCode);
+
+                if (associatedForm != null)
+                {
+                    associatedForm.FirstName = form.FirstName;
+                    associatedForm.SecondName = form.SecondName;
+                    associatedForm.ThirdName = form.ThirdName;
+                    associatedForm.Nin = form.Nin;
+                    associatedForm.IsSubmitted = true;
+                }
+
+                await secureRepository.SetAsync("userdata", userData);
+
+                await OnInitializedAsync();
             }
-
-            await secureRepository.SetAsync("userdata", userData);
-
-            await OnInitializedAsync();
+            else
+            {
+                await Toast.Make($"Please provide at least one verification document for {form.CountryName} Citizenship").Show();
+            }
         }
-        else
+        catch (Exception ex)
         {
-            await Toast.Make($"Please provide at least one verification document for {form.CountryName} Citizenship").Show();
+            await Toast.Make(ex.Message).Show();
         }
     }
 
