Fix breaking changes

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -123,7 +123,7 @@
             }
         }
 
-        await navigationService.NavigateTo<CreateCodenameViewModel>(true);
+        await navigationService.NavigateTo<CreateCodenameIndividualViewModel>(true);
     }
 
     private async Task UploadFile(string property, EncryptedCitizenshipForm encryptedCitizenshipForm)
