--- a/BolWallet/Pages/CreateCodenameIndividualPage.razor
+++ b/BolWallet/Pages/CreateCodenameIndividualPage.razor
@@ -18,28 +18,28 @@
         </MudItem>
         <MudItem xs="6" sm="6" md="6">
             <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Disabled="true" Label="First Name" OnlyValidateIfDirty="true"
-                          @bind-Value="@CodenameForm.FirstName.Value" OnBlur="@(x=> CodenameForm.FirstName.Value= CodenameForm.FirstName.Value?.Trim().ToUpper())"
+                          @bind-Value="@IndividualCodenameForm.FirstName.Value" OnBlur="@(x=> IndividualCodenameForm.FirstName.Value= IndividualCodenameForm.FirstName.Value?.Trim().ToUpper())"
                           Margin="@Margin.Dense" Required="true" RequiredError="First name is required!" />
         </MudItem>
         <MudItem xs="6" sm="6" md="6">
             <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"  Label="Surname" OnlyValidateIfDirty="true"
-                          @bind-Value="@CodenameForm.Surname.Value" OnBlur="@(x=> CodenameForm.Surname.Value= CodenameForm.Surname.Value?.Trim().ToUpper())"
+                          @bind-Value="@IndividualCodenameForm.Surname.Value" OnBlur="@(x=> IndividualCodenameForm.Surname.Value= IndividualCodenameForm.Surname.Value?.Trim().ToUpper())"
                           Margin="@Margin.Dense" Required="true" Disabled="true" RequiredError="Surname is required!" />
         </MudItem>
         <MudItem xs="6" sm="6" md="6">
             <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"
-                          Margin="@Margin.Dense" Label="Middle Name" Disabled="true" @bind-Value="@CodenameForm.MiddleName.Value"
-                          OnBlur="@(x=> CodenameForm.MiddleName.Value= CodenameForm.MiddleName.Value?.Trim().ToUpper())" />
+                          Margin="@Margin.Dense" Label="Middle Name" Disabled="true" @bind-Value="@IndividualCodenameForm.MiddleName.Value"
+                          OnBlur="@(x=> IndividualCodenameForm.MiddleName.Value= IndividualCodenameForm.MiddleName.Value?.Trim().ToUpper())" />
         </MudItem>
         <MudItem xs="6" sm="6" md="6">
             <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"
-                          Margin="@Margin.Dense" Label="Third Name" Disabled="true" @bind-Value="@CodenameForm.ThirdName.Value"
-                          OnBlur="@(x=> CodenameForm.ThirdName.Value= CodenameForm.ThirdName.Value?.Trim().ToUpper())" />
+                          Margin="@Margin.Dense" Label="Third Name" Disabled="true" @bind-Value="@IndividualCodenameForm.ThirdName.Value"
+                          OnBlur="@(x=> IndividualCodenameForm.ThirdName.Value= IndividualCodenameForm.ThirdName.Value?.Trim().ToUpper())" />
         </MudItem>
         <MudItem xs="12" sm="12" md="12">
-            <MudTextField @ref="ninTextField" T="string" Variant="MudBlazor.Variant.Outlined" Label="NIN" @bind-Value="@CodenameForm.NIN.Value"
+            <MudTextField @ref="ninTextField" T="string" Variant="MudBlazor.Variant.Outlined" Label="NIN" @bind-Value="@IndividualCodenameForm.NIN.Value"
                           Margin="@Margin.Dense" OnlyValidateIfDirty="true"
-                          HelperText="@CodenameForm.NIN.HelpMessage" Immediate="true" Required="true" RequiredError="@CodenameForm.NIN.ErrorMessage"
+                          HelperText="@IndividualCodenameForm.NIN.HelpMessage" Immediate="true" Required="true" RequiredError="@IndividualCodenameForm.NIN.ErrorMessage"
                           Disabled="true" />
         </MudItem>
         <MudItem xs="12" sm="12" md="12">
@@ -59,7 +59,7 @@
                            DateChanged="@OnDateChanged" Mask="@(new DateMask("0000-00-00"))" DateFormat="yyyy-MM-dd" Placeholder="Birth Date(yyyy-MM-dd)" />
         </MudItem>
         <MudItem xs="12" sm="12" md="12">
-            <MudAutocomplete T="Country" Label="Birth Country" @bind-Value="@CodenameForm.CountryOfBirth" Margin="@Margin.Dense" Dense="true" Variant="MudBlazor.Variant.Outlined"
+            <MudAutocomplete T="Country" Label="Birth Country" @bind-Value="@IndividualCodenameForm.CountryOfBirth" Margin="@Margin.Dense" Dense="true" Variant="MudBlazor.Variant.Outlined"
                              SearchFunc="@Search" HelperText="Choose the country where you were born." ToStringFunc="@(e=> e==null?null : e.Name)" OnBlur="@(x=>StateHasChanged())"
                              Required="true" AdornmentIcon="@Icons.Material.Filled.Search" RequiredError="Country is required" Strict="false">
             </MudAutocomplete>
@@ -109,18 +109,18 @@
         if (country is null)
             return;
 
-        var encryptedCitizenship = createCodenameViewModel.userData.EncryptedCitizenshipForms.FirstOrDefault(c => c.CountryCode == country.Alpha3);
+        var encryptedCitizenship = createCodenameIndividualViewModel.userData.EncryptedCitizenshipForms.FirstOrDefault(c => c.CountryCode == country.Alpha3);
 
         if (encryptedCitizenship is null)
             return;
 
-        CodenameForm.FirstName.Value = encryptedCitizenship.FirstName;
-        CodenameForm.Surname.Value = encryptedCitizenship.SurName;
-        CodenameForm.MiddleName.Value = encryptedCitizenship.SecondName;
-        CodenameForm.ThirdName.Value = encryptedCitizenship.ThirdName;
-        CodenameForm.FirstName.Value = encryptedCitizenship.FirstName;
-        CodenameForm.NIN.Value = encryptedCitizenship.Nin;
-        CodenameForm.SelectedCountry = country;
+        IndividualCodenameForm.FirstName.Value = encryptedCitizenship.FirstName;
+        IndividualCodenameForm.Surname.Value = encryptedCitizenship.SurName;
+        IndividualCodenameForm.MiddleName.Value = encryptedCitizenship.SecondName;
+        IndividualCodenameForm.ThirdName.Value = encryptedCitizenship.ThirdName;
+        IndividualCodenameForm.FirstName.Value = encryptedCitizenship.FirstName;
+        IndividualCodenameForm.NIN.Value = encryptedCitizenship.Nin;
+        IndividualCodenameForm.SelectedCountry = country;
 
         registrationCountry = country;
     }
@@ -148,11 +148,11 @@
 
         await createCodenameIndividualViewModel.Initialize();
 
-        registrationCountry = CodenameForm.SelectedCountry;
+        registrationCountry = IndividualCodenameForm.SelectedCountry;
 
         OnCountrySelected(registrationCountry);
 
-        BirthDate = CodenameForm.Birthdate.Value == null ? new DateTime(lastYear, 12, 31) : Convert.ToDateTime(CodenameForm.Birthdate.Value);
+        BirthDate = IndividualCodenameForm.Birthdate.Value == null ? new DateTime(lastYear, 12, 31) : Convert.ToDateTime(IndividualCodenameForm.Birthdate.Value);
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
@@ -187,9 +187,9 @@
     private async Task<IEnumerable<Country>> SearchRegistrationCountries(string value)
     {
         if (string.IsNullOrEmpty(value))
-            return createCodenameViewModel.userData.Citizenships;
+            return createCodenameIndividualViewModel.userData.Citizenships;
 
-        return await Task.Run(() => createCodenameViewModel.userData.Citizenships.Where(x => x.Name.StartsWith(value, StringComparison.InvariantCultureIgnoreCase)).ToList());
+        return await Task.Run(() => createCodenameIndividualViewModel.userData.Citizenships.Where(x => x.Name.StartsWith(value, StringComparison.InvariantCultureIgnoreCase)).ToList());
     }
 
     private async Task FieldChanged(FormFieldChangedEventArgs args)
