Fix missing mapping

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -223,6 +223,7 @@
 
                 if (associatedForm != null)
                 {
+                    associatedForm.SurName = form.SurName;
                     associatedForm.FirstName = form.FirstName;
                     associatedForm.SecondName = form.SecondName;
                     associatedForm.ThirdName = form.ThirdName;
