--- a/BolWallet/Pages/CreateCodenameCompanyPage.razor
+++ b/BolWallet/Pages/CreateCodenameCompanyPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/create-codename-page"
+﻿@page "/create-company-codename-page"
 
 @inherits MvvmComponentBase<CreateCodenameCompanyViewModel>
 
@@ -12,35 +12,32 @@
     <MudGrid>
         <MudItem xs="6" sm="6" md="6">
             <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="Company Title" OnlyValidateIfDirty="true"
-                          @bind-Value="@CompanyCodenameForm.Title.Value" OnBlur="@(x=> CompanyCodenameForm.Title.Value = CompanyCodenameForm.Title.Value?.Trim().ToUpper())"
-                          Margin="@Margin.Dense" Required="true" Validation="@CompanyCodenameForm.Title.IsReady" RequiredError="@CompanyCodenameForm.Title.ErrorMessage" />
+                          @bind-Value="@CompanyCodenameForm.Title.Value" Immediate="true" OnBlur="@(x=> CompanyCodenameForm.Title.Value = CompanyCodenameForm.Title.Value?.Trim().ToUpper())"
+                          HelperText="@CompanyCodenameForm.Title.HelpMessage"
+                          Margin="@Margin.Dense" Required="true" ErrorText="@CompanyCodenameForm.Title.ErrorMessage" Validation="@CompanyCodenameForm.Title.IsReady" RequiredError="@CompanyCodenameForm.Title.ErrorMessage" />
         </MudItem>
 
         <MudItem xs="6" sm="6" md="6">
             <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="VAT" OnlyValidateIfDirty="true"
-                          @bind-Value="@CompanyCodenameForm.VatNumber" OnBlur="@(x=> CompanyCodenameForm.VatNumber= CompanyCodenameForm.VatNumber?.Trim().ToUpper())"
+                          HelperText="VAT needs to be at least 5 characters"
+                          @bind-Value="@CompanyCodenameForm.VatNumber" Immediate="true" OnBlur="@(x=> CompanyCodenameForm.VatNumber= CompanyCodenameForm.VatNumber?.Trim().ToUpper())"
                           Margin="@Margin.Dense" Required="true" RequiredError="Vat is required!" />
         </MudItem>
 
         <MudItem xs="6" sm="6" md="6">
 
             <MudAutocomplete T="Country" Label="Country" @bind-Value="@CompanyCodenameForm.CompanyCountry" Margin="@Margin.Dense" Dense="true" Variant="MudBlazor.Variant.Outlined"
-                             SearchFunc="@Search" ToStringFunc="@(e=> e==null?null : e.Name)" OnBlur="@(x=>StateHasChanged())"
+                             SearchFunc="@Search" ToStringFunc="@(e=> e==null?null : e.Name)" Immediate="true" OnBlur="@(x=>StateHasChanged())"
                              Required="true" AdornmentIcon="@Icons.Material.Filled.Search" RequiredError="Country is required" Strict="false">
             </MudAutocomplete>
 
         </MudItem>
 
-        <MudItem xs="6" sm="6" md="6">
-            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="Extra Digit" OnlyValidateIfDirty="true"
-                          @bind-Value="@CompanyCodenameForm.ExtraDigit.Value" MaxLength="1" OnBlur="@(x=> CompanyCodenameForm.ExtraDigit.Value = CompanyCodenameForm.ExtraDigit.Value?.Trim().ToUpper())"
-                          Margin="@Margin.Dense" Required="true" Validation="@CompanyCodenameForm.ExtraDigit.IsReady" RequiredError="@CompanyCodenameForm.ExtraDigit.ErrorMessage" />
-        </MudItem>
 
-        <MudItem xs="12" sm="12" md="12">
+        <MudItem xs="6" sm="6" md="6">
             <MudSelect T="Bol.Core.Model.OrgType" Label="Company Type" Variant="MudBlazor.Variant.Outlined"
                        Margin="@Margin.Dense" Dense="true" AnchorOrigin="Origin.BottomCenter"
-                       @bind-Value="@CompanyCodenameForm.OrgType" Required="true" RequiredError="OrgType is required">
+                       @bind-Value="@CompanyCodenameForm.OrgType" Immediate="true" Required="true" RequiredError="OrgType is required">
                 @foreach (Bol.Core.Model.OrgType ot in OrgTypes)
                 {
                     <MudSelectItem T="Bol.Core.Model.OrgType" Value="@(Enum.Parse<Bol.Core.Model.OrgType>(ot.ToString()))">@CreateCodenameCompanyViewModel.EnumDisplayedName(ot)</MudSelectItem>
@@ -51,8 +48,15 @@
         <MudItem xs="12" sm="12" md="12">
             <MudDatePicker Label="Incorporation Date(yyyy-MM-dd)" Editable="true" Date="@IncorporationDate" Variant="MudBlazor.Variant.Outlined"
                            Margin="@Margin.Dense"
-                           MinDate="new DateTime(1900, 1, 1)" MaxDate="DateTime.Today"
+                           HelperText="VAT must contains at least 5 characters"
+                           MinDate="new DateTime(1900, 1, 1)" MaxDate="DateTime.Today" Immediate="true"
                            DateChanged="@OnDateChanged" Mask="@(new DateMask("0000-00-00"))" DateFormat="yyyy-MM-dd" Placeholder="Incorporation Date(yyyy-MM-dd)" />
+        </MudItem>
+
+        <MudItem xs="12" sm="12" md="12">
+            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Immediate="true" Label="Extra Digit" OnlyValidateIfDirty="true"
+                          @bind-Value="@CompanyCodenameForm.Combination.Value" HelperText="Extra Digit to create codename" MaxLength="1" OnBlur="@(x=> CompanyCodenameForm.Combination.Value = CompanyCodenameForm.Combination.Value?.Trim().ToUpper())"
+                          Margin="@Margin.Dense" Required="true" Validation="@CompanyCodenameForm.Combination.IsReady" RequiredError="@CompanyCodenameForm.Combination.ErrorMessage" />
         </MudItem>
 
         <MudItem xs="12" sm="12" md="12">
