--- a/BolWallet/Views/CreateCodenameCompanyPage.xaml
+++ b/BolWallet/Views/CreateCodenameCompanyPage.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:pages="clr-namespace:BolWallet.Pages"
-    Title="Create your CodeName - Company"
+    Title="Create your Company CodeName"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
