--- a/BolWallet/Pages/RegisterAsCertifierPage.razor
+++ b/BolWallet/Pages/RegisterAsCertifierPage.razor
@@ -1,5 +1,7 @@
 ﻿@page "/register-as-certifier"
 
+@using CoreCountry = Bol.Core.Model.Country
+
 @inject NavigationManager nav;
 @inject RegisterContent _content;
 @inject IBolService bolService;
@@ -24,10 +26,11 @@
                     <MudText>4) Add 1000 bol as collateral to the first commercial address.</MudText>
                     <MudText>5) Please note that there is a maximum fee limit that you can set for your certification services.</MudText>
 
-                    <MudSelect T="string" Label="Countries" Required="true" For="@(() => registerAsCertifierForm.Countries)" HelperText="Supported Countries as Certifier" MultiSelection="true" @bind-Value="registerAsCertifierForm.Countries">
+                    <MudSelect T="string" Label="Countries" Required="true" HelperText="Supported Countries as Certifier" MultiSelection="true" @bind-SelectedValues="registerAsCertifierForm.Countries">
+                        <MudSelectItem T="string" Value="@("ALL")">Global</MudSelectItem>
                         @foreach (var country in _content.Countries)
                         {
-                            <MudSelectItem T="string" Value="country.Name">@country.Name</MudSelectItem>
+                            <MudSelectItem T="string" Value="country.Alpha3">@country.Name</MudSelectItem>
                         }
                     </MudSelect>
 
@@ -54,20 +57,9 @@
     {
         try
         {
-            List<Bol.Core.Model.Country> supportedCountries = new();
-            List<string> selectedCountries = registerAsCertifierForm.Countries.Split(",").ToList();
-
-            foreach (var countryName in selectedCountries)
-            {
-                Country selectedCountry = _content.Countries.FirstOrDefault(c => c.Name == countryName.Trim());
-
-                supportedCountries.Add(new Bol.Core.Model.Country
-                {
-                    Name = selectedCountry.Name,
-                    Alpha3 = selectedCountry.Alpha3,
-                    Region = selectedCountry.Region
-                });
-            }
+            List<CoreCountry> supportedCountries = registerAsCertifierForm.Countries
+                .Select(a3 => new CoreCountry { Alpha3 = a3.Trim() })
+                .ToList();
 
             var account = await bolService.RegisterAsCertifier(supportedCountries, new BigInteger(registerAsCertifierForm.Fee));
             await NavigationService.NavigateTo<MainWithAccountViewModel>(true);
