Implement Citizenship Data Storage with Hashed and Raw Byte Representation

--- a/BolWallet/Pages/CitizenshipPage.razor
+++ b/BolWallet/Pages/CitizenshipPage.razor
@@ -81,6 +81,7 @@
                     CountryName = citizenshipCountry.Name,
                     CountryCode = citizenshipCountry.Alpha3,
                     CitizenshipHashes = savedEncryptedCitizenshipForm?.CitizenshipHashes ?? new Bol.Core.Model.CitizenshipHashTable(),
+                    CitizenshipActualBytes = savedEncryptedCitizenshipForm?.CitizenshipActualBytes ?? new Bol.Core.Model.CitizenshipHashTable(),
                     CitizenshipHashTableFileNames = savedEncryptedCitizenshipForm?.CitizenshipHashTableFileNames ?? new CitizenshipHashTableFileNames(),
                     FirstName = savedEncryptedCitizenshipForm?.FirstName,
                     SecondName = savedEncryptedCitizenshipForm?.SecondName,
