--- a/BolWallet/Views/AccountPage.xaml
+++ b/BolWallet/Views/AccountPage.xaml
@@ -201,12 +201,14 @@
                                                 <ColumnDefinition Width="1*" />
                                             </Grid.ColumnDefinitions>
                                             <Label Grid.Column="0"
+                                                   FontSize="12"
                                                    HorizontalOptions="Center"
                                                    VerticalOptions="Center"
                                                    Text="{Binding Key}"
                                                    FontAttributes="Bold"
                                                    TextColor="White"/>
                                             <Label Grid.Column="1"
+                                                   FontSize="12"
                                                    HorizontalOptions="Center"
                                                    VerticalOptions="Center"
                                                    Text="{Binding Value}"
