--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -78,7 +78,8 @@
 
     List<(string, MudBlazor.Color, string, string)> CitizeshipsDocuments = new()
       {
-          {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Identity Card", "") },
+          {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Front Side of Identity Card", "") },
+          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card", "") },
           {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
           {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
           {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
@@ -96,10 +97,11 @@
 
         CitizeshipsDocuments = new()
         {
-            {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Identity Card", "") },
-            {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
-            {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
-            {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
+          {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Front Side of Identity Card", "") },
+          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card", "") },
+          {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
+          {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
+          {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
         };
 
         foreach (var encryptedCitizenshipForm in userData.EncryptedCitizenshipForms)
@@ -249,7 +251,7 @@
 
     private bool HasNonZeroHashes(CitizenshipHashTable citizenshipHashTable)
     {
-        return !(citizenshipHashTable.IdentityCard == Bol.Core.Constants.HASH_ZEROS &&
+        return !((citizenshipHashTable.IdentityCard == Bol.Core.Constants.HASH_ZEROS || citizenshipHashTable.IdentityCardBack == Bol.Core.Constants.HASH_ZEROS) &&
                  citizenshipHashTable.Passport == Bol.Core.Constants.HASH_ZEROS &&
                  citizenshipHashTable.ProofOfNin == Bol.Core.Constants.HASH_ZEROS &&
                  citizenshipHashTable.BirthCertificate == Bol.Core.Constants.HASH_ZEROS);
