--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -79,7 +79,7 @@
     List<(string, MudBlazor.Color, string, string)> CitizeshipsDocuments = new()
       {
           {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Front Side of Identity Card", "") },
-          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card", "") },
+          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card - If the back side of your identity card is not available, please resubmit the front side.", "") },
           {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
           {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
           {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
@@ -98,7 +98,7 @@
         CitizeshipsDocuments = new()
         {
           {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Front Side of Identity Card", "") },
-          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card", "") },
+          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card - If the back side of your identity card is not available, please resubmit the front side.", "") },
           {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
           {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
           {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
